// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useFormik error > reactivity on values changes 1`] = `
{
  "email": "This field is required.",
  "name": "This field is required",
}
`;

exports[`useFormik error > reactivity on values changes 2`] = `
{
  "email": "Invalid email",
  "name": "This field is required",
}
`;
